--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
 }
 .searchfield input{
     background: #ebfffc;
