--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body{
     font-size: 20px;
     flex: 1;
     margin-right: 15px;
+    border: none;
 }
 .searchfield button{
     width:100px;
@@ -42,6 +43,7 @@ body{
     border-radius: 20px;
     cursor: pointer;
     font-size: 20px;
+    border: none;
 }
 
 .weather-icon{
